<resources>
    <string name="app_name">Nithra Jobs</string>
    <string name="fb_app_Id">1363870920398929</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_all_jobs">Nithra Jobs</string>
    <string name="title_notifications">Notifications</string>
    <string name="fontsize">13</string>
    <string name="lineHeight">20</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_job_detail">முழு விபரங்கள்</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search">தேடல்</string>
    <string name="search_text">தேடு</string>
    <string name="home">முகப்பு</string>
    <string name="filter">வடிகட்டல்</string>
    <string name="favourites">விருப்பமானவைகள்</string>
    <string name="no">இல்லை</string>
    <string name="consultancy_text">கன்சல்டன்சி பணி என்பது பணி வழங்கும் நிறுவனத்திற்கும் வேலை தேடுபவர்களுக்கும் ஒரு இணைப்பு பாலமாக இருப்பது ஆகும். எனவே எங்களது செயலியில் பதிவிட்டுள்ள கன்சல்டன்சி வேலைவாய்ப்பு சம்பந்தமாக நீங்கள் கன்சல்டன்சிக்கு பணம் கொடுக்க நேரிட்டால் நித்ரா வேலைவாய்ப்பு செயலியானது எவ்விதத்திலும் பொறுப்பேற்காது.</string>
    <string name="emp_info">உங்கள் நிறுவனத்திற்கு ஆட்கள் தேவை எனில் இந்த அப்ளிகேஷனில் உங்கள் வேலைவாய்ப்பு தகவலைப் பதிவிட எங்களது அலைபேசி எண் : <U>9942267855</U> -க்கு தொடர்பு கொள்ளவும். </string>
    <string name="info">இப்பகுதியில் உங்கள் படிப்பு, தகுதி, அனுபவம், இருப்பிடம் ஆகியவற்றை அடிப்படையாக கொண்டு வேலை வாய்ப்புகளை வடிகட்டி கொள்ளலாம்.இப்பகுதியில் வேலைவாய்ப்புகள் இல்லையெனில், முதல் பக்கத்தில் உள்ள வேலைவாய்ப்புத் தகவல்களை பார்த்து பயன்பெறுங்கள்.</string>
    <string name="ok">சரி</string>
    <string name="yes">ஆம்</string>
    <string name="register">பதிவுசெய்</string>
    <string name="des">விளக்கம்</string>
    <string name="scop">வாய்ப்புகள்</string>
    <string name="college">கல்லூரிகள்</string>
    <string name="entrence">நுழைவுத்தேர்வு</string>
    <string name="higher">உயர்கல்வி</string>
    <string name="jobs">வேலை வாய்ப்புகள்</string>
    <string name="titlejobs">நித்ராவின் வேலை வாய்ப்புகள்</string>
    <string name="viraivil">விரைவில்</string>
    <string name="aduthailaku">அடுத்த இலக்கு</string>
    <string name="padapirivugal">பாடப்பிரிவுகள்</string>
    <string name="kallurigal">கல்லூரிகள்</string>
    <string name="thedal">தேடல்</string>
    <string name="name">பெயர்</string>
    <string name="email">மின்னஞ்சல்</string>
    <string name="mobileno">கைப்பேசி எண்</string>
    <string name="fakejob">Fake Job</string>
    <string name="lnf">Link not found</string>
    <string name="exjob">Expired Job</string>
    <string name="cnr">Call no response</string>
    <string name="others">Others</string>
    <string name="rprt">இந்த தகவல் பற்றி நீங்கள் ஏன் புகார் அளிக்க விரும்புகிறீர்கள்?</string>
    <string name="kallurigal_mavatavariyaga">கல்லூரிகள் மாவட்ட வாரியாக</string>
    <string name="seithigal">செய்திகள்</string>
    <string name="dnf">தகவல் ஏதும் இல்லை</string>
    <string name="dist">மாவட்டங்கள்</string>
    <string name="thuraigal">துறைகள்</string>
    <string name="padangal">பாடங்கள்</string>
    <string name="loading">காத்திருக்கவும்</string>
    <string name="action_delete">DELETE</string>
    <string name="parinthurai">உங்களுக்கான பரிந்துரைக்கப்படும் படிப்புகள்</string>
    <string name="notification">அறிவிப்புகள்</string>
    <string name="employer">நிறுவனத் தொடர்பு</string>
    <string name="current_qualification">தற்போதைய தகுதி</string>
    <string name="eligiblity">தகுதி</string>
    <string name="share">பகிரவும்</string>
    <string name="fb">முகநூல் அழைப்பு</string>
    <string name="our_apps">நித்ரா செயலிகள்</string>
    <string name="privacy_policy">தனியுரிமை கொள்கை</string>
    <string name="exit">வெளியேறு</string>
    <string name="profile">சுயவிபரம்</string>
    <string name="fav_course">விருப்பமான படிப்புகள்</string>
    <string name="fav_colleges">விருப்பமான கல்லூரிகள்</string>
    <string name="mp">முந்தய பதிவுகள்</string>
    <string name="rating">மதிப்பிடுக</string>
    <string name="disclaimer">பொறுப்பு துறப்பு</string>
    <string name="feed_back">கருத்துக்கள்</string>
    <string name="settings">அமைப்புகள்</string>
    <string name="fav">விருப்பமானவை</string>
    <string name="reminder">நினைவூட்டல்</string>
    <string name="check_update">புதிய பதிப்பு</string>
    <string name="send">அனுப்புக</string>
    <string name="old_post">முந்தைய பதிவுகள்</string>
    <string name="privatejob">தனியார்</string>
    <string name="state_govt">மாநில அரசு</string>
    <string name="already_added">முன்னரே சேர்க்கப்பட்டுவிட்டது.</string>
    <string name="central_govt">மத்திய அரசு</string>
    <string name="consultancy">கன்சல்டன்சி</string>
    <string name="private_title">தனியார் / உள்ளூர் பணிகள்</string>
    <string name="state_title">மாநில அரசுப்பணிகள்</string>
    <string name="central_title">மத்திய அரசுப்பணிகள்</string>
    <string name="consultancy_title">கன்சல்டன்சி பணிகள்</string>
    <string name="fresher_title">FRESHERS JOBS</string>
    <string name="all_jobs">அனைத்து வேலைவாய்ப்புகளையும் காண</string>
    <string name="jobs_employer">உங்கள் நிறுவனத்தின் வேலைவாய்ப்பை இலவசமாக பதிவிட</string>
    <string name="gexams">அரசு பணித்தேர்வுகள் பற்றிய விபரங்கள்</string>
    <string name="oldpost">வேலைவாய்ப்பு சார்ந்த பயனுள்ள குறிப்புகள்</string>
    <string name="rjob_title">எங்களால் பரிந்துரைக்கப்படுபவை</string>
    <string name="rjob_skill_title">உங்கள் திறமைக்கானவை</string>
    <string name="rjob_location_title">நீங்கள் தேர்ந்தெடுத்த இடங்களில் உள்ளவை</string>
    <string name="rjob_qualifi_title">உங்கள் படிப்பிற்கானவை</string>
    <string name="app_logoLink">https://s3-ap-southeast-1.amazonaws.com/nithra/logo_jobs.png</string>
    <string name="search_no_job">நீங்கள் தேடிய வேலை வாய்ப்பு தற்போது இல்லை.அனைத்து வேலை வாய்ப்புகளையும் காண (முகப்பு) பகுதியை பயன்படுத்தவும்.</string>
    <string name="profile_expired">உங்கள் சுயவிவரம் காலாவதியாகிவிட்டது, மீண்டும் பதிவுசெய்து கொள்ளுங்கள்.</string>
    <string name="no_rjob">நீங்கள் பதிவு செய்த தகவல்களுக்கான (சுயவிபரம்) வேலைவாய்ப்பு தற்போது இல்லை.அனைத்து வேலை வாய்ப்புகளையும் காண (அனைத்து வேலைவாய்ப்புகளையும் காண) பகுதியை பயன்படுத்தவும்.</string>
    <string name="guide_search">Search பகுதியானது பயனாளர்கள் பயன்படுத்துவதற்கு எளிமையாக இருக்க வேண்டும் என்ற நோக்கத்தில் மேம்படுத்தப்பட்டு வருகிறது. தற்போது இப்பகுதியானது முதல் நிலையில் உள்ளது. தொடர்ந்து மேம்படுத்தப்படவுள்ளது.</string>
    <string name="no_fav">விருப்பமானவை ஏதும் இல்லை</string>
    <string name="user_post">நீங்கள் அறிந்த வேலைவாய்ப்பு</string>
    <string name="govt_exams">அரசு பணித்தேர்வுகள்</string>
    <string name="user_post_error">உங்களுக்கு தெரிந்த வேலைவாய்ப்பு தகவல்களை தட்டச்சு செய்து அனுப்பவும்.</string>
    <string name="user_jobs_test">உங்கள் வேலை வாய்ப்பு தகவல் சரிபார்த்தலுக்கு அனுப்பப்பட்டுள்ளது,நன்றி.</string>
    <string name="user_post_hint">நீங்கள் Copy செய்த வேலைவாய்ப்பு தகவல்களை இங்கே Long Press-செய்து Paste செய்து கொள்ளலாம்.</string>
    <string name="post_job">உங்களுக்கு தெரிந்த வேலைவாய்ப்பு தகவல்களை மற்றவர்களுக்கு தெரிவிக்க !</string>
    <string name="click_all">தற்போது இப்பகுதியின் முதல்நிலையானது சோதனை (Testing) முறையில் வெளியிடப்பட்டுள்ளது. இந்த பகுதியானது தொடர்ச்சியாக மேம்படுத்தப்பட்டு வருகிறது.</string>
    <string name="filter_info">இப்பகுதியில் உங்கள் படிப்பு, தகுதி, அனுபவம், இருப்பிடம் ஆகியவற்றை அடிப்படையாக கொண்டு வேலை வாய்ப்புகளை வடிகட்டி கொள்ளலாம். இப்பகுதியில் வேலைவாய்ப்புகள் இல்லையெனில், முகப்பு பக்கத்தில் உள்ள அனைத்து வேலைவாய்ப்புகளையும் காண பகுதியை பார்த்து பயன்பெறுங்கள்.</string>
    <string name="qualification_info1">இப்பகுதியில் நீங்கள் குறிப்பிடும் அனைத்து கல்வித்தகுதிக்கான வேலைவாய்ப்புகளும் உங்களுக்கு பரிந்துரைக்கப்படும்.</string>
    <string name="qualification_info2">உங்கள் பள்ளி படிப்பை தேர்வு செய்தபின், பட்ட படிப்பையும் தேர்வு செய்திருந்தால் உங்களுக்கு பள்ளி படிப்பை தகுதியாக கொண்ட வேலைவாய்ப்பு தகவல்களும் மற்றும் பட்ட படிப்பு கல்விதகுதிக்கான வேலைவாய்ப்பு தகவல்களும் பரிந்துரைக்கபடும்.</string>
    <string name="ex">எ.கா :</string>
    <string name="official_news">அதிகாரப்பூர்வ அறிவிப்பு</string>
    <string name="website">இணைய முகவரி</string>
    <string name="select_option">உங்கள் கருத்தை தேர்வு செய்து அனுப்பவும்,நன்றி</string>
    <string name="type">உங்கள் கருத்தை தட்டச்சு செய்து அனுப்பவும்,நன்றி</string>
    <string name="nametype">உங்கள் பெயரை தட்டச்சு செய்யவும்.</string>
    <string name="content_saved">உங்கள் கருத்து பதிவு செய்யப்பட்டது, நன்றி</string>
    <string name="view_profile">சுயவிபரம் பார்க்க</string>
    <string name="otp_pending">OTP எண்-ஐ உள்ளீடு செய்ய</string>
    <string name="signup">பதிவு செய் / உள்நுழைவு</string>
    <string name="complete_registration">படிவத்தை பூர்த்தி செய்யவும்</string>
    <string name="contiue">தொடர</string>
    <string name="noneed">வேண்டாம்</string>
    <string name="later">பின்னர்</string>
    <string name="retry">மீண்டும் முயற்சிக்கவும்</string>
    <string name="repeatno">நீங்கள் பதிவு செய்த கைப்பேசி எண்ணானது ஏற்கனவே நீங்கள் பதிவு செய்த கைப்பேசி எண் ஆகும்</string>
    <string name="delete_text1">1. உங்கள் சுயவிபரத்தை நீக்கும் பட்சத்தில் உங்கள் பதிவுகள் எங்கள் தொகுப்பில் இருந்து முழுமையாக நீக்கப்படும்.</string>
    <string name="delete_text2">2. உங்களுக்காக பரிந்துரைக்கப்படும் வேலை வாய்ப்புகளை எங்களால் காண்பிக்க இயலாது.</string>
    <string name="delete_text3">3. மேலும் உங்களது மின்னஞ்சல், தொலைபேசி எண் மற்றும் மற்ற விபரங்களை வேலை வழங்கும் நிறுவனத்திற்கு வழங்கப்பட மாட்டது.</string>
    <string name="delete_text4">உங்கள் சுயவிபரத்தை உறுதியாக நீக்க விரும்புகிறீர்களா?</string>
    <string name="ina_swipe_down">உங்கள் இணைய இணைப்பை சரி செய்து கீழே swipe செய்யவும்.</string>
    <string name="select_location">நீங்கள் விரும்பும் இடத்தை(Preferred Job Location) தேர்வுசெய்து சுயவிவரத்தை புதுப்பிக்கவும்.</string>
    <string name="select_skills">உங்களிடம் இருக்கும் திறமையை (Skills) தேர்வுசெய்து சுயவிவரத்தை புதுப்பிக்கவும்.</string>
    <string name="check_new_update">புதிய பதிப்பு உள்ளனவா என ஆராய்கிறது.</string>
    <string name="blocked_user">உங்கள் கைப்பேசி எண் தடைசெய்யப்பட்டுள்ளது.</string>
    <string name="blocked">தடைசெய்யப்பட்டுள்ளது.</string>
    <string name="user_query">மேலும் விவரங்களுக்கு 9942267855 என்ற கைப்பேசி எண்ணை தொடர்பு கொள்ளவும். </string>
    <string name="rjobs_text">இப்பகுதியானது பயனாளர்களின் வேண்டுகோளுக்கு இணங்க பிரத்யேகமாக உருவாக்கப்பட்டுள்ளது. தற்போது இதன் இரண்டாம் நிலை வெளியிடப்பட்டுள்ளது. இதனை பயன்படுத்தி உங்களின் கருத்துக்களை செயலியில் உள்ள Feedback மூலமாகவோ அல்லது jobs@nithra.mobi என்ற மின்னஞ்சல் முகவரி மூலமாகவோ எங்களுக்கு தெரிவிக்கவும்.</string>
    <string name="fill_blanks">உங்களுக்கான வேலை வாய்ப்புகளை பரிந்துரை செய்ய படிவத்தில் குறிப்பிட்டுள்ள அனைத்து தகவல்களையும் பூர்த்தி செய்து பதிவு செய்யவும்.</string>
    <string name="otp_verification">நீங்கள் பதிவு செய்த கைப்பேசி எண் முழுவதுமாக சரிபார்க்கப்படவில்லை. மேலும் தொடர, நீங்கள் பதிவு செய்த கைப்பேசி எண்ணிற்கு அனுப்பப்பட்டுள்ள நான்கு  இலக்க OTP எண்-ஐ உள்ளீடு செய்யவும்.</string>
    <string name="swipe_side">இடம் வலம் நகர்த்தி மேலும் வேலை வாய்ப்புகளை பார்வையிடுங்கள்.</string>
    <string name="guide_profile_icon">உங்களுக்காக பரிந்துரைக்கப்படும் வேலை வாய்ப்புகளை பெற இந்த icon-ஐ கிளிக் செய்து பதிவு செய்யவும்.</string>
    <string name="guide_profile_search">இந்த icon-ஐ கிளிக் செய்து நீங்கள் எதிர்பார்க்கும் வேலைவாய்ப்பை தேடிக்கொள்ளலாம்.</string>
    <string name="guide_update_profile">உங்கள் விபரங்களை புதுப்பித்து கொள்ள இங்கே கிளிக் செய்யவும்.</string>
    <string name="guide_email_change">உங்கள் மின்னஞ்சல்  முகவரியை மாற்றிக்கொள்ள இங்கே கிளிக் செய்யவும்.</string>
    <string name="rjobs_intro">படிப்பு, திறமை, அனுபவம், இருப்பிடம் ஆகியவற்றை கொண்டு வேலை வாய்ப்புகளை பரிந்துரை செய்ய உங்களின் விபரங்களை எங்களிடம் பதிவு செய்யுங்கள். பதிவு செய்யும் தகவல்கள் அனைத்தும் பாதுகாக்கப்படும்.</string>
</resources>