<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_old_post"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/old_post" />
        <item
            android:id="@+id/nav_exam_details"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/govt_exams" />
        <item
            android:id="@+id/nav_employer"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/employer" />
        <item
            android:id="@+id/nav_user_post"
            android:icon="@drawable/ic_accessibility_black_24dp"
            android:title="@string/user_post" />
        <item
            android:id="@+id/nav_search_id"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="Search By JobID" />
    </group>
    <item android:title="மற்றவை">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_notifications_none_black_24dp"
                android:title="@string/notification" />
            <item
                android:id="@+id/nav_tc"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/disclaimer" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_star_half_black_24dp"
                android:title="@string/rating" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_feed_back"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="@string/feed_back" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_myresume_aps"
                android:icon="@drawable/resume_icon"
                android:title="Resume Builder" />
            <item
                android:id="@+id/nav_our_aps"
                android:icon="@drawable/nithra_logo"
                android:title="@string/our_apps" />
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_lock_outline_black_24dp"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/exit" />
            </group>
        </menu>
    </item>
</menu>
