<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_call_white_24dp"
        android:id="@+id/action_employer"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/employer"/>
    <item
        android:icon="@drawable/ic_search_white_24dp"
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:visible="false"
        android:icon="@drawable/ic_notifications_none_white_24dp"
        android:id="@+id/actio1n_notifications"
        android:orderInCategory="100"
        android:title="@string/notification"
        app:showAsAction="always" />

    <item
        android:icon="@drawable/ic_notifications_none_white_24dp"
        android:id="@+id/action_notifications"
        android:title="@string/notification"
        android:orderInCategory="100"
        app:showAsAction="always" />
</menu>

