<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:layout_marginTop="@dimen/lrtbp_10"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/white"
        android:layout_marginRight="@dimen/lrtbp_10"
        android:layout_marginLeft="@dimen/lrtbp_10"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
        android:id="@+id/txtfd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/notification"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:padding="@dimen/lrtbp_10"
        android:src="@drawable/ic_info_black_24dp"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_12"
        android:textStyle="italic|bold"
        android:tint="@color/white" />

    <WebView
        android:id="@+id/info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/info"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/lrtbp_15" />

    <TextView
        android:id="@+id/text_ok"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="20dp" />

</LinearLayout>
</LinearLayout>