<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/front_shape">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wh_50"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/wh_50"
                android:layout_height="@dimen/wh_50"
                android:src="@drawable/handshake"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/wh_80"
                android:gravity="center"
                android:text="Register with us!"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_18"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/lrtbp_15"
                android:gravity="center"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/rjobs_intro"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_12"
                android:textStyle="bold" />

            <Button
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/colorAccent"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:padding="@dimen/lrtbp_10"
                android:textSize="@dimen/txt_12"
                android:textStyle="bold|italic"
                android:layout_marginTop="@dimen/lrtbp_25"
                android:layout_marginBottom="@dimen/lrtbp_10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/later"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_12"
                android:textStyle="bold|italic"
                android:layout_marginBottom="@dimen/lrtbp_10"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>

